# restapi

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.template  Dockerfile  README.md  Taskfile.yml  compose-dev.yaml  pyproject.toml  requirements.txt  restfull.db  start.py  test_restfull.db
restfull/domain/: const.py  types.py
restfull/domain/entities/: __init__.py  entity.py  user.py
restfull/domain/exceptions/: __init__.py  user.py
restfull/domain/repository/: user.py
restfull/infrastructure/api/: application.py
restfull/infrastructure/api/endpoints/: auth.py  create_user.py  delete_user.py  get_all_users.py  get_user.py  search_user.py  update_user.py
restfull/infrastructure/api/responses/: base.py
restfull/infrastructure/auth/: auth.py  database.py  manager.py  schemas.py
restfull/infrastructure/config/: main.py
restfull/infrastructure/database/: engine.py  sqlalchemy.py
restfull/infrastructure/models/: __init__.py  base.py  user.py
restfull/infrastructure/repository/: user.py
tests/: conftest.py  test_create.py  test_get_all_users.py
tests/test_handlers/: test_auth.py  test_create.py  test_delete.py  test_get_all.py  test_get_by_id.py  test_search.py  test_update.py
